--- a/src/res/strings_de.properties
+++ b/src/res/strings_de.properties
@@ -1,3 +1,3 @@
 welcome.message=Willkommen in unserem
 welcome.button=Aufenthalt
-welcome.tooltip=Eine Begrüßungsnachricht.
+welcome.tooltip=Wetter in Deutschland
