Delivery of fr-FR: src/res/strings_fr.properties

--- a/src/res/strings_fr.properties
+++ b/src/res/strings_fr.properties
@@ -1,3 +1,3 @@
-welcome.message=Bienvenue dans notre
-welcome.button=Rester
+welcome.message=De grandes choses arrivent
+welcome.button=Envoyer
 welcome.tooltip=Bon endroit !
