--- a/src/res/strings_it.properties
+++ b/src/res/strings_it.properties
@@ -1,3 +1,3 @@
-welcome.message=Benvenuti al nostro
-welcome.button=In casa
+welcome.message=Grandi cose in arrivo
+welcome.button=Invia
 welcome.tooltip=Bel posto.
