Delivery of de-DE: src/res/strings_de.properties

--- a/src/res/strings_de.properties
+++ b/src/res/strings_de.properties
@@ -1,3 +1,3 @@
-welcome.message=Willkommen in unserem
-welcome.button=Aufenthalt
+welcome.message=Tolle Dinge kommen
+welcome.button=Senden
 welcome.tooltip=Guter Ort.
